Arreglamos un Error

--- a/style.css
+++ b/style.css
@@ -70,6 +70,7 @@ body {
   list-style: none;
 }
 .nav li a {
+  position: relative;
   margin-left: 2rem;
   text-decoration: none;
   font-family: sans-serif;
