--- a/style.css
+++ b/style.css
@@ -151,7 +151,7 @@ body {
 .fa-instagram:hover {
   color: #c13584;
 }
-.social .svg-inline--fa:hover {
+.social a:hover .svg-inline--fa{
   transform: scale(1.1);
   cursor: pointer;
 }
@@ -159,7 +159,7 @@ body {
   position: relative;
   z-index: 100;
   -webkit-box-reflect: below 0
-    linear-gradient(transparent, transparent, transparent, #00000014);
+    linear-gradient(transparent, transparent, transparent, #0000000a);
 }
 .home__container-img__img {
   position: relative;
@@ -339,7 +339,7 @@ body {
   text-decoration: none;
   letter-spacing: 0.4px;
   color: #000000;
-  box-shadow: rgb(34 209 238 / 70%) 1px 24px 26px -18px;
+  box-shadow: rgb(34 209 238 / 90%) 1px 24px 26px -18px;
   transition: 0.6s;
 }
 .projects__card__btn:hover {
@@ -441,36 +441,36 @@ span::before {
   }
 }
 span:nth-child(1) {
-  top: -10px;
-  right: 150px;
+  top: -0.625em;
+  right: 9.375em;
   left: initial;
   animation-delay: 5s;
   animation-duration: 16.5s;
 }
 span:nth-child(2) {
-  top: 100px;
+  top: 6.25em;
+  right: -10em;
   left: initial;
-  right: -160px;
   animation-delay: 1s;
   animation-duration: 20s;
 }
 span:nth-child(3) {
-  top: -10px;
+  top: -0.625em;
+  right: 25em;
   left: initial;
-  right: 400px;
   animation-delay: 2s;
   animation-duration: 15.5s;
 }
 span:nth-child(4) {
-  top: 640px;
-  right: -120px;
+  top: 40em;
+  right: -7.5em;
   left: initial;
   animation-delay: 4s;
   animation-duration: 23s;
 }
 span:nth-child(5) {
-  top: 1140px;
-  right: -100px;
+  top: 71.25em;
+  right: -6.25em;
   left: initial;
   animation-delay: 9s;
   animation-duration: 12s;
@@ -525,7 +525,7 @@ span:nth-child(5) {
     font-size: 11.3px;
   }
   .home__paragraph {
-    line-height: 24px;
+    line-height: 25px;
     margin-top: 13px;
   }
   .home__container-img__img {
@@ -581,30 +581,37 @@ span:nth-child(5) {
     width: 30px;
     background-color: #fff;
   }
-  .home {
-    padding-right: 0;
-    padding-left: 0;
-  }
   .line:nth-child(2) {
     width: 27px;
   }
   .line:nth-child(3) {
     width: 15.78px;
   }
+  .home {
+    padding-right: 0;
+    padding-left: 0;
+  }
   .home__title.h1 {
     font-size: 3.1em;
+    line-height: 43px;
   }
   .fab {
     font-size: 1.48em;
   }
 }
 @media (max-width: 510px) {
+  .home {
+    min-height: 95vh;
+  }
   .home__title.h2 {
     font-size: 2.15em;
   }
   .home__title.h1 {
     line-height: 39px;
     font-size: 2.6em;
+  }
+  .home__paragraph {
+    letter-spacing: 0;
   }
   .home__container-img__img {
     width: 238px;
@@ -647,28 +654,17 @@ span:nth-child(5) {
 @media (max-width: 450px) {
   .home__text {
     font-size: 11px;
-    padding: 12px;
-    text-align: center;
+    padding: 13px;
   }
   .home__title.h1 {
     font-size: 2.4em;
     margin-top: -1px;
     margin-bottom: 6px;
     white-space: inherit;
-    line-height: 23px;
+    line-height: 25px;
   }
   .home__title.h2 {
     font-size: 2em;
-  }
-  .home__paragraph {
-    letter-spacing: 0;
-  }
-  .social {
-    justify-content: center;
-    gap: 40px;
-  }
-  .fab {
-    margin-right: 0;
   }
   .projects {
     padding-left: 8.5%;
