--- a/style.css
+++ b/style.css
@@ -198,13 +198,13 @@ body {
 .titles {
   position: relative;
   text-align: center;
-  font-size: 66px;
+  font-size: 68px;
   font-weight: 700;
   letter-spacing: 2.4px;
   color: #fff;
   border-radius: 30px;
   padding: 20px;
-  margin-bottom: 40px;
+  margin-bottom: 45px;
   z-index: 100;
 }
 .titles::after {
@@ -214,10 +214,13 @@ body {
   right: 0;
   bottom: 0;
   margin: 10px auto 0;
-  width: 185px;
+  width: 188px;
   height: 10px;
   background-color: #3d5af1;
   border-radius: 5px;
+}
+.services .titles {
+  margin-bottom: 25px;
 }
 .services__container-divs {
   width: 100%;
@@ -240,23 +243,21 @@ body {
 }
 .services__information__img {
   height: 300px;
-  margin: 60px 0;
-  -webkit-box-reflect: below 2px
-    linear-gradient(transparent, transparent, transparent, #04060f25);
+  margin: 50px 0 30px;
 }
 .services__information__title {
   text-align: center;
   font-style: normal;
   font-weight: 700;
-  font-size: 2.25em;
+  font-size: 2.65em;
   letter-spacing: 0.02em;
   margin-bottom: 10px;
   color: #22d1ee;
 }
 .services__information__paragraph {
-  max-width: 434px;
+  max-width: 442px;
   font-weight: 300;
-  font-size: 1.375em;
+  font-size: 1.4em;
   text-align: center;
   letter-spacing: 0.72px;
   line-height: 30px;
@@ -284,7 +285,6 @@ body {
   justify-content: center;
 
   grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
-  /* grid-template-columns: repeat(3, 1fr); */
   gap: 30px;
   row-gap: 100px;
   padding: 40px 0;
@@ -303,7 +303,7 @@ body {
 .projects__img {
   width: 100%;
   -webkit-box-reflect: below 2px
-    linear-gradient(transparent, transparent, transparent, #04060f25);
+    linear-gradient(transparent, transparent, transparent, #04060f28);
   transition: 0.4s;
 }
 .projects__img:hover {
@@ -339,12 +339,12 @@ body {
   text-decoration: none;
   letter-spacing: 0.4px;
   color: #000000;
-  box-shadow: rgb(34 209 238 / 90%) 1px 24px 26px -18px;
+  box-shadow: rgb(34 209 238 / 95%) 1px 24px 26px -18px;
   transition: 0.6s;
 }
 .projects__card__btn:hover {
   background-color: #00f7ff;
-  box-shadow: rgb(34 209 238 / 60%) 1px 30px 25px -13px;
+  box-shadow: rgba(0, 247, 255, 0.75) 1px 30px 25px -13px;
 }
 .contact {
   min-height: 85vh;
@@ -595,8 +595,15 @@ span:nth-child(5) {
     font-size: 3.1em;
     line-height: 43px;
   }
-  .fab {
-    font-size: 1.48em;
+  .services__information {
+    font-size: 14px;
+  }
+  .projects {
+    padding-left: 8.5%;
+    padding-right: 8.5%;
+  }
+  .projects__grid {
+    grid-template-columns: 1fr;
   }
 }
 @media (max-width: 510px) {
@@ -625,12 +632,10 @@ span:nth-child(5) {
     width: 124px;
   }
   .services__information {
-    font-size: 13px;
-    line-height: inherit;
+    font-size: 12px;
   }
   .services__information__img {
     height: 220px;
-    margin-bottom: 30px;
   }
   .projects__card__paragraph {
     font-size: 17.5px;
@@ -665,10 +670,6 @@ span:nth-child(5) {
   }
   .home__title.h2 {
     font-size: 2em;
-  }
-  .projects {
-    padding-left: 8.5%;
-    padding-right: 8.5%;
   }
   .projects__grid {
     grid-template-columns: 310px;
