--- a/style.css
+++ b/style.css
@@ -270,7 +270,7 @@ body {
   font-weight: 300;
   color: #fff;
   margin-top: 30px;
-  margin-bottom: 30px;
+  margin-bottom: 20px;
   cursor: pointer;
 }
 .services__information__view-more::after {
@@ -674,6 +674,9 @@ span:nth-child(5) {
   .services__information__paragraph {
     line-height: 26px;
     max-width: 335px;
+  }
+  .services__information__view-more {
+    font-size: 18px;
   }
   .projects__card__paragraph {
     font-size: 17.5px;
