--- a/style.css
+++ b/style.css
@@ -189,8 +189,8 @@ body {
   height: 100%;
   background-image: linear-gradient(
     342deg,
-    rgba(58, 14, 14, 0.165),
-    rgba(61, 91, 241, 0.31)
+    rgba(58, 14, 14, 0.16),
+    rgba(61, 91, 241, 0.3)
   );
   border-radius: 50%;
   filter: blur(25px);
@@ -278,7 +278,6 @@ body {
   opacity: 1;
   transform: scale(1);
   visibility: visible;
-  transition: 0.3s;
 }
 .modal__title {
   font-size: 4em;
@@ -372,7 +371,7 @@ body {
   margin-left: 7px;
   border-radius: 50%;
   background-color: rgba(255, 255, 255, 0.044);
-  transition: 0.6s;
+  transition: margin-left 0.6s;
 }
 .services__information__view-more:hover {
   color: rgb(216, 216, 216);
